# DetectionEvaluator

./: BUILD  CMakeLists.txt  WORKSPACE  base.cpp  base.hxx  bbox.cxx  bbox.hxx  coco.cxx  coco.hxx  main.cxx  utils.hxx
include/: BoundingBox.hxx  CocoDataset.hxx  Dataset.hxx  DatasetBase.hxx  coco_utils.hxx  gen_utils.hxx  genutils.hxx
src/: BoundingBox.cxx  CocoDataset.cxx  Dataset.cxx  DatasetBase.cxx  coco_utils.cxx
